--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "drizzle-orm": "^0.38.0",
     "next": "^14.2.1",
